--- a/portfolio.css
+++ b/portfolio.css
@@ -7,6 +7,11 @@
 html{
     scroll-behavior: smooth;
 }
+i{
+    font-size: 26px;
+    cursor: pointer;
+}
+
 body{
     background-color: #080808;
     color: #fff;
@@ -82,6 +87,59 @@ nav ul li a:hover::after{
 }
 .header-text h1 span{
     color: #ff004f;
+}
+.animated-text{
+    font-size: 34px;
+    font-weight: 600;
+    min-width: 280px;
+}
+.animated-text span{
+    position: relative;
+}
+.animated-text span::before{
+    content: "Software Engineer!";
+    color: #fff;
+    animation: words 20s infinite;
+
+}
+.animated-text span::after{
+    content: "";
+    position: absolute;
+    width: calc(100% + 8px);
+    width: 0;
+    height: 100%;
+    background-color: black;
+    border-left: 2.5px solid #fff;
+    right: -8px;
+    animation: cursor .8s infinite, typing 20s steps(14) infinite;
+}
+@keyframes cursor {
+    to{
+    border-left: 2px solid #ff7f5000;
+    }
+}
+@keyframes words {
+    0%,20%{
+        content: "Software Engineering,";
+    }
+    0%,40%{
+        content: "UI/UX Designer,";
+    }
+    0%,60%{
+        content: "Technical writter,";
+    }
+    0%,80%{
+        content: "I bring Ideas to web.";
+    }
+
+}
+@keyframes typing{
+    10%, 15%,30%,35%,50%,70%,75%,90%,95%{
+        width: 0;
+    }
+    5%,20%,25%,40%,45%,60%,65%,80%,85%{
+        width: calc(100% + 8px);
+    }
 }
 .CV{
     font-size: 16px;
@@ -357,7 +415,7 @@ nav .fas{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url("background.png.jpg");
+        background-image: url("background2.jpg");
     }
     .header-text{
         margin-top: 100%;
@@ -376,8 +434,8 @@ nav .fas{
         top: 0;
         right: -200px;
         width: 200px;
-        height: 100vh;
-        padding: 50px;
+        height: 70vh;
+        padding-top: 50px;
         z-index: 2;
         transition: right 0.5s;
     }
