--- a/portfolio.css
+++ b/portfolio.css
@@ -34,10 +34,12 @@ body{
 
 }
 nav{
+    background-color: transparent;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: sticky;
 }
 nav ul li{
     display: inline-block;
@@ -108,7 +110,7 @@ nav ul li a:hover::after{
     width: calc(100% + 8px);
     width: 0;
     height: 100%;
-    background-color: black;
+    background-color: #080808;
     border-left: 2.5px solid #fff;
     right: -8px;
     animation: cursor .8s infinite, typing 20s steps(14) infinite;
@@ -328,6 +330,52 @@ transform: scale(1.1);
 
 }
 
+/*--------------------tools and skills--------------------*/
+
+
+#skills2 div h3{
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+#skills2 div p{
+font-size: 16px;
+text-align: center;
+margin-bottom: 20px;
+}
+
+#skills2 div .tools{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    border-bottom:1px dotted lightgray;
+    border-top: 0.5px dotted lightgray;
+    height: 150px;
+    align-items: center;
+    margin: 0 15px;
+    margin-right: 15px;
+    margin-bottom: 70px;
+   width: 100%;
+
+}
+
+#skills2 div .tools img{
+    padding: 5px;
+    height: 100px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border: 0.3px solid lightgray;
+    border-radius: 4px;
+    margin-left: 30px;
+    margin-right: 30px;
+   
+}
+   
+
+
+
 /* -------------------------contact---------------------- */
 .touch{
     font-size: 30px;
@@ -447,7 +495,31 @@ nav .fas{
         position: absolute;
         top: 25px;
         left: 25px;
-        cursor: pointer;
+        cursor: pointer;}
+
+     /*-------------skills------------*/
+     #skills2 div .tools {
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: 20px;
+        margin-left: 0;
+     }
+
+     #skills2 div .tools {
+        display: flex;
+        width: 100%;
+        height: auto;
+        align-items: center;
+        margin-bottom: 30px;
+    }
+
+    #skills2 div .tools img {
+        padding: 5px;
+        height: 77px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        border: 0.3px solid lightgray;
+        border-radius: 4px;
     }
     .sub-title{
         font-size: 40px;
@@ -464,6 +536,9 @@ nav .fas{
     .tab-links{
         font-size: 16px;
         margin-right: 20px;
+    }
+   
+        
     }
     .contact-left, .contact-right{
         flex-basis: 100%;
