--- a/portfolio.css
+++ b/portfolio.css
@@ -373,8 +373,7 @@ margin-bottom: 20px;
     margin-bottom: 15px;
     border: 0.3px solid lightgray;
     border-radius: 4px;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin: 0 auto;
    
 }
    
