--- a/portfolio.css
+++ b/portfolio.css
@@ -8,6 +8,7 @@ html{
     scroll-behavior: smooth;
 }
 i{
+    margin-top: 70px;
     font-size: 26px;
     cursor: pointer;
 }
@@ -22,9 +23,10 @@ body{
     font-style: italic;
     color: #ff004f;
 }
+
 #header{
     width: 100%;
-    height: 70vh;
+    height: 90vh;
     background-size: cover;
     background-image: url("background112.jpg");
     background-position: center;
@@ -34,17 +36,23 @@ body{
 
 }
 nav{
-    background-color: transparent;
+    background-color: black;
+    width: 100%;
+    height: 70px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    position: sticky;
+    position: fixed;
+    top: 0;
+    margin-bottom: 20px;
 }
 nav ul li{
     display: inline-block;
     list-style: none;
     margin: 10px 20px;
+    float: left;
+    
 
 }
 nav ul li a{
@@ -52,6 +60,7 @@ nav ul li a{
     text-decoration: none;
     font-size: 18px;
     position: relative;
+    margin-left: 10px;
 }
 nav ul li a::after{
     content: '';
@@ -68,10 +77,10 @@ nav ul li a:hover::after{
     width: 100%;
 }
 .header-text{
-    margin: 20%;
-    font-size: 30px;
+    margin: 15%;
+    font-size: 26px;
     margin: 70px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 #talk{
     float: left;
@@ -163,10 +172,13 @@ nav ul li a:hover::after{
 .about-col-1 img{
     width: 100%;
     border-radius: 15px;
+    cursor: pointer;
 }
+
 img{
     border-radius: 20px;
 }
+
 .about-col-2{
     flex-basis: 60%;
 }
@@ -332,17 +344,15 @@ transform: scale(1.1);
 
 /*--------------------tools and skills--------------------*/
 
-
+#skills2 {
+    margin-left: 10%;
+    margin-right: 10%;
+}
 #skills2 div h3{
     font-size: 24px;
     font-weight: 500;
     margin-bottom: 20px;
     text-align: center;
-}
-
-#skills2 .tools
-{
-    margin-left: 0px;
 }
 
 #skills2 div p{
@@ -353,7 +363,7 @@ margin-bottom: 20px;
 
 #skills2 div .tools{
     display: flex;
-    flex-wrap: nowrap;
+    overflow: scroll;
     justify-content: space-between;
     border-bottom:1px dotted lightgray;
     border-top: 0.5px dotted lightgray;
@@ -366,14 +376,21 @@ margin-bottom: 20px;
 
 }
 
+#skills2 div .tools::-webkit-scrollbar{
+    width: 0;
+    right: none;
+}
+
 #skills2 div .tools img{
     padding: 5px;
     height: 100px;
     margin-top: 15px;
+    margin-left: 20px;
     margin-bottom: 15px;
     border: 0.3px solid lightgray;
     border-radius: 4px;
-    margin: 0 auto;
+   
+   
    
 }
    
@@ -451,14 +468,15 @@ form.btn2{
 .copyright{
     width: 100%;
     text-align: center;
-    padding: 25px 0;
+    padding: 15px 0;
     background: #262626;
     font-weight: 400;
-    margin-top: 20px;
+    margin-top: 15px;
 
 }
 .copyright i{
     color: #ff004f;
+    font-size: 18px;
 }
 /* ------------------------css for small screens------------- */
 nav .fas{
@@ -494,34 +512,48 @@ nav .fas{
     nav ul li{
         display: block;
         margin: 25px;
+        justify-content: center;
     }
+
     nav ul .fas{
         position: absolute;
         top: 25px;
         left: 25px;
         cursor: pointer;}
 
+        .animated-text {
+            font-size: 24px;
+            font-weight: 600;
+            min-width: 280px;
+          
+        }
+
+        .btn {
+            display: block;
+            margin: 50px auto;
+            width: fit-content;
+            border: 1px solid #ff004f;
+            border-radius: 6px;
+            padding: 14px;
+            text-decoration: none;
+            color: #fff;
+            transition: background 0.5s;
+        }
+
      /*-------------skills------------*/
-     #skills2 div .tools {
-        display: flex;
-        flex-wrap: wrap;
-        margin-bottom: 20px;
-        margin-left: 0;
-     }
+     
 
      #skills2 div .tools {
         display: flex;
-        width: 100%;
-        height: auto;
-        align-items: center;
-        margin-bottom: 30px;
+        overflow: auto;
     }
 
     #skills2 div .tools img {
         padding: 5px;
         height: 70px;
-        margin-top: 15px;
-        margin-bottom: 15px;
+        display: flex;
+        margin-top: 5px;
+        margin-bottom: 5px;
         border: 0.3px solid lightgray;
         border-radius: 4px;
     }
